# CryptoVampire

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  default.nix  doc.nix  flake.nix  fmt.nix  gramar.pest  grammar.pest  hash_lock.ptcl  nix.patch  rg  test.txt  tmp.out  tmp.smt
crates/cryptovampire/: Cargo.toml  default.nix
crates/cryptovampire/src/: cli.rs  lib.rs  location.rs  main.rs  return_value.rs
crates/cryptovampire/src/container/: allocator.rs  contained.rs  container.rs  mod.rs  reference.rs
crates/cryptovampire/src/environement/: environement.rs  mod.rs
crates/cryptovampire/src/environement/traits/: realm.rs
crates/cryptovampire/src/error/: anywhere.rs  error.rs  faillure.rs  inner_error.rs  location.rs  macros.rs  mod.rs  result.rs  unsupported.rs
crates/cryptovampire/src/error/location/: empty.rs  location.rs  location_helper.rs  mod.rs  no_location.rs  pest.rs  pest_location.rs  str.rs  str_location.rs  unit_location.rs
crates/cryptovampire/src/formula/: mod.rs  variable.rs
crates/cryptovampire/src/formula/base_formula/: mod.rs  tmp_formula.rs
crates/cryptovampire/src/formula/formula/: arc.rs  expanding_formula.rs  formula.rs  mod.rs
crates/cryptovampire/src/parser/: error.rs  location.rs  mod.rs  pstr.rs
crates/cryptovampire/src/problem/: generator.rs  mod.rs  protocol.rs  step.rs
crates/cryptovampire/src/runner/: error.rs  mod.rs  runner.rs  runner_helper.rs  runners.rs  searcher.rs  tptp.rs  vampire.rs  z3.rs
crates/cryptovampire/src/smt/: mod.rs  smt.rs
crates/cryptovampire/src/squirrel/: mod.rs
crates/cryptovampire/src/subterm/: mod.rs
crates/cryptovampire/src/tests/: miri.rs  mod.rs
crates/indistinguishability/: Cargo.toml
crates/indistinguishability/src/: enc_kp.rs  grammar.rs  ind_cca.rs  main.rs
crates/indistinguishability/src/formula/: analysis.rs.old
crates/indistinguishability/src/mutils/: linked_list.rs  mod.rs
crates/logic_formula/: Cargo.toml
crates/logic_formula/src/: head.rs  iterators.rs  traits.rs
crates/logic_formula/src/outers/: owned_pile.rs  ref_cell_pile.rs  ref_pile.rs
crates/test-crate/: Cargo.toml
crates/test-crate/src/: lib.rs
cryptovampire/: Cargo.toml  grammar.pest
cryptovampire-bridge/: Cargo.toml
cryptovampire-bridge/src/: converter.rs  json.rs  lib.rs  main.rs
cryptovampire-bridge/src/converters/: mod.rs  stage0.rs  stage1.rs  stage2.rs  stage3.rs
cryptovampire-bridge/tests/assets/squirrel-files/: decl_crypto.sp
cryptovampire-bridge/tests/assets/squirrel-output/: full1.json  full4.json  term1.json
cryptovampire-lib/: Cargo.toml
cryptovampire-lib/src/: lib.rs
cryptovampire-lib/src/container/: allocator.rs  contained.rs  container.rs  mod.rs  reference.rs
cryptovampire-lib/src/environement/: env_old.rs  environement.rs  mod.rs
cryptovampire-lib/src/environement/traits/: mod.rs  realm.rs
cryptovampire-lib/src/formula/: mod.rs  quantifier.rs  tmpformula.rs  variable.rs
cryptovampire-lib/src/formula/as_formula/: mod.rs
cryptovampire-lib/src/formula/base_formula/: mod.rs  tmp_formula.rs
cryptovampire-lib/src/formula/file_descriptior/: axioms.rs  declare.rs
cryptovampire-lib/src/formula/formula/: arc.rs  expanding_formula.rs  formula.rs  mod.rs  tmpformula.rs
cryptovampire-lib/src/formula/function/: builtin.rs  function.rs  mod.rs  name_caster_collection.rs  traits.rs
cryptovampire-lib/src/formula/manipulation/: mod.rs  unifier.rs
cryptovampire-lib/src/formula/sort/: mod.rs  sort_proxy.rs  sorted.rs
cryptovampire-lib/src/formula/utils/: formula_expander.rs  formula_iterator.rs  formula_trait.rs  formula_user.rs  mod.rs
cryptovampire-lib/src/problem/: cell_dependancies.rs  mod.rs  problem_old.rs  protocol.rs  step.rs
cryptovampire-lib/src/problem/cell/: inner.rs  mod.rs
cryptovampire-lib/src/problem/cell_dependancies/: call.rs  cell_or_input.rs  graph.rs  macro_ref.rs  mod.rs  preprocessed_graph.rs
cryptovampire-lib/src/problem/crypto_assumptions/: cell.rs  euf_cma.rs  euf_cma_mac.rs  euf_cma_mac.rs.old  euf_cma_sign.rs  int_ctxt.rs  mod.rs  nonce.rs  uf_cma.rs  unfolding.rs
cryptovampire-lib/src/problem/general_assertions/: assertion_preprocessor.rs  evaluate.rs  mod.rs  order.rs
cryptovampire-lib/src/problem/problem/: builder.rs  mod.rs  pbl_iterator.rs
cryptovampire-lib/src/problem/protocol/: ordering.rs
cryptovampire-lib/src/problem/subterm/: mod.rs  traits.rs
cryptovampire-lib/src/runner/: mod.rs  runner.rs  runner_helper.rs  runners.rs  searcher.rs  tmpformula.rs  tptp.rs  vampire.rs  vampire_runner.rs  z3.rs
cryptovampire-lib/src/smt/: mod.rs  smt.rs
cryptovampire-lib/src/smt/smt/: display.rs
cryptovampire-lib/src/subterm/: kind.rs  mod.rs  traits.rs
cryptovampire/src/: cli.rs  lib.rs  main.rs  return_value.rs
cryptovampire/src/parser/: ast.rs  error.rs  mod.rs  parser.old.rs  pstr.rs
cryptovampire/src/parser/ast/: assertions.rs  bindings.rs  cell.rs  extra.rs  find_such_that.rs  ident.rs  if_then_else.rs  infix.rs  let_in.rs  macros.rs  main.rs  mmacro.rs  mod.rs  options.rs  step.rs  term.rs
cryptovampire/src/parser/parser/: declare.rs  guard.rs  mod.rs  parsable_trait.rs  parse_step_cell_asserts.rs  parsing_environement.rs  state.rs
cryptovampire/src/runner/: mod.rs  searcher.rs  tmpformula.rs  tptp.rs  vampire_runner.rs
cryptovampire/src/smt/: macros.rs  mod.rs  smt.rs
cryptovampire/src/smt/smt/: display.rs
cryptovampire/src/squirrel/: json.rs  mod.rs
cryptovampire/src/squirrel/converters/: ast_convertion.rs  convert_order.rs  helper_functions.rs  mod.rs  stage0.rs  stage1.rs  stage2.rs  stage3.rs  top_level_converter.rs
cryptovampire/src/squirrel/json/: action.rs  content.rs  mmacro.rs  mod.rs  mtype.rs  operator.rs  path.rs  sort.rs  squirrel_dump.rs  term.rs
cryptovampire/src/tests/: miri.rs  mod.rs
nix/: doc.nix  (+1 more)
utils/: Cargo.toml
utils/src/: all_or_one.rs  arc_into_iter.rs  enum_utils.rs  fast_partial_cmp.rs  from_with.rs  infinity.rs  iter_array.rs  lib.rs  maybe_owned.rs  monad.rs  ord_util.rs  precise_as_ref.rs  string_ref.rs  test_utils.rs  traits.rs  utils.rs  vecref.rs
(+426 files in other folders)
