[workspace]
members = ["cryptovampire", "cryptovampire-lib", "utils", "logic_formula"]
resolver = "2"
# authors = ["Simon Jeanteur <7871851+puyral@users.noreply.github.com>"]
default-members = ["cryptovampire", "cryptovampire-lib"]

[workspace.dependencies]
itertools = "0.13"
if_chain = "1.0.2"
hashbrown = "0.14.0"
log = { version = "0.4", features = ["release_max_level_warn"] }
static_init = "1.0"
paste = "1.0"
thiserror = "1.0"
macro-attr = "0.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"]}
derive_builder = "0.20.0"
bitflags = "2.6"

[all.package.lints.rust]
elided_lifetimes_in_paths = "error"