[package]
name = "cryptovampire-bridge"
version = "0.3.1"
edition = "2021"
authors = ["Simon Jeanteur <7871851+puyral@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptovampire = { path = "../cryptovampire" }
cryptovampire-lib = { path = "../cryptovampire-lib", features = ["serde"] }
utils = { path = "../utils" }

itertools = { workspace = true }
if_chain = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
static_init = { workspace = true }
paste = { workspace = true }
macro-attr ={ workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

env_logger = "0.11"
serde_json = "1.0.120"

[dev-dependencies]
serde_path_to_error = "0.1"
paste = { workspace = true }