[package]
name = "cryptovampire-lib"
version = "0.5.0"
edition = "2021"
authors = ["Simon Jeanteur <simon.jeanteur@tuwien.ac.at>"]
description = "A computationnally sound automated cryptographic protocol verifier based on the CCSA."
readme = "../README.md"
license-file = "../LICENCE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils ={ path = "../utils", features = ["serde"]}
logic_formula = {path = "../logic_formula", features = ["serde"]}
# ord-utils = { git = "https://github.com/puyral/ord-utils" }

# qcell = "0.5.3"
# bumpalo = { version = "3.12.0", features = ["boxed", "collections"] }
# typed-arena = "2.0.2"

itertools = { workspace = true }
if_chain = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
static_init = { workspace = true }
paste = { workspace = true }
thiserror = { workspace = true }
macro-attr ={ workspace = true }
anyhow = { workspace = true }
derive_builder = { workspace = true }
bitflags = { workspace = true }

tptp = "0.31"
regex = "1.10"
tempfile = "3.10"
shared_child = "1.0.0"
once_cell = "1.19.0"
which = "6.0.1"

# dashmap = "5.5.3"
# smol = "2.0.0"
