[package]
name = "cryptovampire"
version = "0.4.0"
edition = "2021"
authors = ["Simon Jeanteur <7871851+puyral@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptovampire-lib = { path = "../cryptovampire-lib"}
utils = { path = "../utils" }

itertools = { workspace = true }
if_chain = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
static_init = { workspace = true }
paste = { workspace = true }
macro-attr ={ workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

pest = "2.5.1"
pest_derive = "2.5.1"
clap = { version = "4", features = ["derive"] }
derivative = { version = "2.2" }
const_format = "0.2"
env_logger = "0.11"
clap_complete = "4.5.7"
serde_json = "1.0.120"

[dev-dependencies]
serde_path_to_error = "0.1"
paste = { workspace = true }