[package]
name = "utils"
version = "0.1.0"
edition = "2021"
authors = ["Simon Jeanteur <7871851+puyral@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { workspace = true }
thiserror = { workspace = true }
if_chain = { workspace = true }
itertools = { workspace = true }
