[package]
name = "indistinguishability"
version = "0.1.0"
edition = "2021"

[dependencies]
egg = "0.9.5"
utils = { path = "../utils"}
logic_formula = {path = "../logic_formula"}
itertools.workspace = true
static_init = { workspace = true }
paste = { workspace = true }
rustc-hash = "2.1.0"
smallvec = { version = "1.13.2", features = ["const_generics", "const_new", "union"] }

[lints]
workspace = true
